[package]
name = "lang"
description = "a programming language"
version = "0.1.0"
authors = ["Michael Hewson <michael@michaelhewson.ca>"]
edition = "2018"

[dependencies]
lalrpop-util = "0.16.3"
regex = "1.1.2"
rustyline = "3.0.0"
codespan = "0.2.1"
fnv = "1.0.6"
failure = "0.1.5"
derive_more = "0.14.0"
